--- a/essential funcs/generateEmail/views/email.html
+++ b/essential funcs/generateEmail/views/email.html
@@ -49,7 +49,7 @@
               title={{orderId}} width="100" height="100" />
           </div>
         </div>
-        <div class="box2" style=" ">
+        <div class="box2" >
 
           <span>
             Your order number is
