--- a/essential funcs/generateEmail/views/email.html
+++ b/essential funcs/generateEmail/views/email.html
@@ -79,8 +79,7 @@
     </div>
     <div class="flex">Ankunda Marion.</div>
     </p>
-    <div style="color: #004040;  padding-top: 15px; text-align: center;" class="">Scentsational. Look ,feel & Smell
-      good.</div>
+    <div style="color: #004040;  padding-top: 15px; text-align: center;" class="">Look ,feel & Smell Scentsational. </div>
   </div>
 
   </p>
