--- a/essential funcs/generateEmail/views/notify.html
+++ b/essential funcs/generateEmail/views/notify.html
@@ -52,7 +52,7 @@
              </span>
           </div>
         </div>
-        <div class="box2" style=" ">
+        <div class="box2">
 
           <span>
            The order number is
